# .dotfiles

./: .gitignore  .gitmodules  .manjaro-config  .p10k.zsh  .tmux.conf  .zshrc  README.md  install.sh  keybindings.json  kitty.conf  pyproject.toml  settings.json  test
alacritty/: alacritty.toml
configs/: .manjaro-config  .p10k.zsh  .tmux.conf  .zshrc
configs/Kvantum/: kvantum.kvconfig
configs/dunst/: dunst.conf  dunstrc
configs/fastfetch/: config.jsonc
configs/hypr/: hyprland.conf  keybindings.lua.new  windowrules.conf
configs/nixos/: configuration.nix  flake.nix  nvidia.nix  packages.nix
configs/nvim/: lazy-lock.json
configs/rofi/: clipboard.rasi  select-launcher.rasi  select-theme.rasi
configs/zsh/: aliases.zsh
fish/: config.fish
i3/: config
kitty/: kitty.conf  kitty.conf.bak
nvim/: lazy-lock.json
nvim/spell/: en.utf-8.add.spl
polybar/: config.ini  launch.sh
qtile/: autostart.sh  config.py
qtile.edit/: config.py  constants.py
qtile.edit/mappings/: windows.py
scripts/: compare_pkg  config.json  config.txt  config.yaml  configure.py  configure.sh  convert_config.py  cprj  helpers.py  helpers.sh  install.py  install.sh  install_fnt.py  install_pkg.py  install_pre.py  masoninit.sh  package.sh  packages.py  parameters.py  timer  user_vars.sh
scripts/mason/: requirements.txt
scripts/ricing/: tmux.sh
scripts/system/: login.sh  pacman.sh  services.sh
setup/: README.md
setup/scripts-bash/: custom_hypr.lst  global_fn.sh  install.sh  install_fnt.sh  install_pkg.sh  install_pre.sh  restore_cfg.lst  test.sh
wezterm/: wezterm.lua
(+133 files in other folders)
